// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic: valid-package.cjs.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var index = \\"something\\";

exports.default = index;
"
`;

exports[`basic: valid-package.esm.js 1`] = `
"var index = \\"something\\";

export default index;
"
`;

exports[`monorepo: package-one.cjs.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var index = 1;

exports.default = index;
"
`;

exports[`monorepo: package-one.esm.js 1`] = `
"var index = 1;

export default index;
"
`;

exports[`monorepo: package-two.cjs.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var index = 2;

exports.default = index;
"
`;

exports[`monorepo: package-two.esm.js 1`] = `
"var index = 2;

export default index;
"
`;
